--- a/Example/TKAuthorityModule/Info.plist
+++ b/Example/TKAuthorityModule/Info.plist
@@ -24,6 +24,24 @@
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>音乐</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>提醒事件</string>
+	<key>NSCameraUsageDescription</key>
+	<string>相机</string>
+	<key>NSContactsUsageDescription</key>
+	<string>通讯录</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>定位</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>相册</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>日历</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>语音识别</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
